--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,23 +17,28 @@
         android:theme="@style/Theme.FriendsHub"
         tools:targetApi="31">
         <activity
+            android:name=".AdminActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="true"
+            android:label="@string/title_activity_login">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".DataActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.FriendsHub">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-        </activity>
+            android:theme="@style/Theme.FriendsHub"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.FriendsHub">
-        </activity>
+            android:theme="@style/Theme.FriendsHub" />
     </application>
 
 </manifest>
